[package]
name = "rust-axum-greedy-coin-microservice"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43", features = ["full"] }
tower = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "1.5.2", features = ["full"] }
axum-server = "0.7.1"                              # Added axum-server for binding and serving
